fix: fixtext_audit_rules_dac_modification_attr: fix types

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -102,7 +102,7 @@ The audit daemon must be restarted for the changes to take effect.
     Generate a fixtext for audit rules for dac modification events - attr
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 
 #}}
 {{% macro fixtext_audit_rules_dac_modification_attr(syscall) -%}}
