fix: fixtext_audit_rules_dac_modification_chmod/doc: fix type

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -66,7 +66,7 @@ The audit daemon must be restarted for the changes to take effect.
     Generate a fixtext for audit rules for dac modification events - chmod
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 
 #}}
 {{% macro fixtext_audit_rules_dac_modification_chmod(syscall) -%}}
