fix: fixtext_audit_rules_file_deletion_events/doc: fix type

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -54,7 +54,7 @@ The audit daemon must be restarted for the changes to take effect.
     Generate a fixtext for audit rules for file deletion events
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 
 #}}
 {{% macro fixtext_audit_rules_file_deletion_events(syscall) -%}}
