fix: srg_requirement_directory_group_owner/doc: fix name in doc

--- a/shared/macros/10-srg_requirement.jinja
+++ b/shared/macros/10-srg_requirement.jinja
@@ -141,8 +141,8 @@ SRG requirement for setting the group owner on a directory.
 
 :param file: The directory to set the group owner on
 :type file: str
-:param owner: The group to be set
-:type owner: str
+:param group: The group to be set
+:type group: str
 
 #}}
 {{% macro srg_requirement_directory_group_owner(file, group) %}}
