fix: ocil_clause_file_group_owner/doc: fix parameter name in doc

--- a/shared/macros/10-ocil.jinja
+++ b/shared/macros/10-ocil.jinja
@@ -966,8 +966,8 @@ JINJA MACRO ERROR - Unknown init system '{{{ init_system }}}'.
 
 :param file: File to change
 :type file: str
-:param owner: the group owner for the file
-:type owner: str
+:param group: the group owner for the file
+:type group: str
 
 #}}
 {{%- macro ocil_clause_file_group_owner(file, group) -%}}
