--- a/shared/macros/10-ocil.jinja
+++ b/shared/macros/10-ocil.jinja
@@ -831,8 +831,8 @@ ocil_clause: "{{{ sebool }}} is not enabled"
 {{#
     Describe how to check if timer is enabled in systemd.
 
-:param service: The service to check
-:type service: str
+:param timer: The timer to check
+:type timer: str
 
 #}}
 {{%- macro systemd_ocil_timer_enabled(timer) %}}
