fix: fixtext_file_group_owner/doc: parameter name

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -503,8 +503,8 @@ Fixtext for setting the group owner on a file.
 
 :param file: The file to set the group owner on
 :type file: str
-:param owner: The group to be set
-:type owner: str
+:param group: The group to be set
+:type group: str
 
 #}}
 {{% macro fixtext_file_group_owner(file, group) %}}
