fix: fixtext_socket_disabled/doc: parameter name

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -290,8 +290,8 @@ The audit daemon must be restarted for the changes to take effect.
 {{#
     Describe how to disable a socket
 
-:param parameter: socket to be disabled
-:type parameter: str
+:param socket: socket to be disabled
+:type socket: str
 
 #}}
 {{%- macro fixtext_socket_disabled(socket) -%}}
