fix: fixtext_service_disabled/doc: parameter name

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -274,8 +274,8 @@ The audit daemon must be restarted for the changes to take effect.
 {{#
     Describe how to disable a service
 
-:param parameter: service to be disabled
-:type parameter: str
+:param service: service to be disabled
+:type service: str
 
 #}}
 {{%- macro fixtext_service_disabled(service) -%}}
