fix: fixtext_service_enabled/doc: parameter name

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -260,8 +260,8 @@ The audit daemon must be restarted for the changes to take effect.
 {{#
     Describe how to enable a service
 
-:param parameter: service to enable
-:type parameter: str
+:param service: service to enable
+:type service: str
 
 #}}
 {{%- macro fixtext_service_enabled(service) -%}}
