fix: bash_shell_file_set/doc: argument types

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -129,8 +129,8 @@ fi
 :type parameter: str
 :param value: Value to set
 :type value: str
-:param no_quotes: Boolean, if true the value is not quoted. Default is false.
-:type no_quotes: str
+:param no_quotes: If true the value is not quoted. Default is false.
+:type no_quotes: bool
 
 #}}
 {{%- macro bash_shell_file_set(path, parameter, value, no_quotes=false) -%}}
