fix: ocil_firefox_config/doc: add hint about accepted values for value

--- a/shared/macros/10-ocil.jinja
+++ b/shared/macros/10-ocil.jinja
@@ -1088,11 +1088,12 @@ Fill in <tt>GRUBENV_FILE_LOCATION</tt> based on information above.
 
 {{#
 Write out the OCIL for generating the common check for Firefox configuration
+
 :param preference: Name of preference
 :type preference: str
 :param config: configuration item name in Firefox
 :type config: str
-:param value: Expected value for preference
+:param value: Expected value for preference, "true" or "false"
 :type value: str
 
 #}}
