--- a/shared/macros/10-ocil.jinja
+++ b/shared/macros/10-ocil.jinja
@@ -656,7 +656,7 @@ ocil_clause: '"{{{ part }}} is not a mountpoint" is returned'
     it is assumed to be a service and the :code:`port` and :code:`proto` parameters will have no effect.
 
 :param port: The port to allow
-:type port: int
+:type port: str
 :param proto: The protocol to allow
 :type proto: str
 :param service: The service to allow
