fix: fixtext_audit_rules_dac_modification_chown: type name

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -78,7 +78,7 @@ The audit daemon must be restarted for the changes to take effect.
     Generate a fixtext for audit rules for dac modification events - chown
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 
 #}}
 {{% macro fixtext_audit_rules_dac_modification_chown(syscall) -%}}
@@ -90,7 +90,7 @@ The audit daemon must be restarted for the changes to take effect.
     Generate a fixtext for audit rules for dac modification events - chown
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 
 #}}
 {{% macro fixtext_audit_rules_dac_modification_chown(syscall) -%}}
