fix: interactive_users tests: actually use uid_min

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -2649,3 +2649,16 @@ from /etc/os-release from VERSION_ID variable.
 {{%- macro bash_get_version_os_linux(os_release_path="/etc/os-release") -%}}
 grep -P "^VERSION_ID=[\"']?[\w.]+[\"']?$" {{{ os_release_path }}} | sed "s/^VERSION_ID=[\"']\?\([^\"']\+\)[\"']\?$/\1/"
 {{%- endmacro -%}}
+
+
+{{#
+Remove all interactive users (UID >= uid_min) from /etc/passwd
+#}}
+{{%- macro bash_remove_interactive_users_from_passwd_by_uid() -%}}
+# remove all interactive users (UID >= {{{ uid_min }}}) from /etc/passwd
+del=""
+while read -r user; do
+    del+="/^${user}:/d;"
+done < <(awk -F: '($3 >= {{{ uid_min }}}) { print $1 }' /etc/passwd)
+sed -i "${del}" /etc/passwd
+{{%- endmacro -%}}
