Rework jinja macro to use [[:blank:]] instead of \>
Strange enough usage of `\>` and `\` for escaping `.` and `*` produces unexpected results.
As in test string `*.* Something` does not match regex `^\*\.\*\>` but matches `^*.*\>`.
Since usage of the `\>` seems missin in other implmenetations(PCRE, Javascript etc), decided to change it to [[:blank:]],
and escape every special symbol like `*` or `.` with '\' for better readability.

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1601,10 +1601,10 @@ fi
 
 {{%- macro bash_comment_config_line(config_file, key) -%}}
 # If the key exists, comment it. Otherwise do nothing
-# We search for the key string followed by a word boundary (matched by \>),
+# We search for the key string followed by a blank space,
 # so if we search for 'setting', 'setting2' won't match.
-if LC_ALL=C grep -q -m 1 -i -e "{{{ key }}}\\>" "{{{ config_file }}}"; then
-    LC_ALL=C sed -i --follow-symlinks "s/{{{ key }}}\\>.*/#&/gi" "{{{ config_file }}}"
+if LC_ALL=C grep -q -m 1 -i -e "{{{ key }}}[[:blank:]]" "{{{ config_file }}}"; then
+    LC_ALL=C sed -i --follow-symlinks "s/{{{ key }}}[[:blank:]].*/#&/gi" "{{{ config_file }}}"
 fi
 {{%- endmacro -%}}
 
